[project]
name = "starlette-google-login"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.5.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "mcp[cli]>=1.4.1",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
]
